fix overflow body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,43 +1,44 @@
-@import url('bootstrap/dist/css/bootstrap.min.css');
-@import '@fontsource/lato';
-@import '@fontsource/poppins';
+@import url("bootstrap/dist/css/bootstrap.min.css");
+@import "@fontsource/lato";
+@import "@fontsource/poppins";
 
 :root {
   --mainColor: #ffffff;
-    --secondColor: #efc81a;
-    --color-1: #ffffff;
-    --color-2: #f0f0f0;
-    --color-3: #dddddd;
-    --color-4: #2395ff;
-    --color-5: #000000;
-    --color-6: #6b6b6b;
-    --color-7: #f6fbff;
-    --shadow-black-100: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --shadow-black-300: 0 5px 15px rgba(0, 0, 0, 0.3);
+  --secondColor: #efc81a;
+  --color-1: #ffffff;
+  --color-2: #f0f0f0;
+  --color-3: #dddddd;
+  --color-4: #2395ff;
+  --color-5: #000000;
+  --color-6: #6b6b6b;
+  --color-7: #f6fbff;
+  --shadow-black-100: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --shadow-black-300: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 .ff-poppins {
-  font-family: 'Poppins', 'sans-serif';
+  font-family: "Poppins", "sans-serif";
 }
 
 .ff-lato {
-  font-family: 'Lato', 'sans-serif';
+  font-family: "Lato", "sans-serif";
 }
 
 html,
 body {
   /* background-color: var(--color-2); */
-    /* display: flex;
+  /* display: flex;
    justify-content: center;
   align-items: center;
     */
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-x: hidden;
 }
 
 a {
   color: inherit;
-    text-decoration: none;
+  text-decoration: none;
 }
 
 * {
@@ -126,4 +127,5 @@ i:hover {
   cursor: default;
 }
 
-@media (prefers-color-scheme: dark) {}
+@media (prefers-color-scheme: dark) {
+}
